# openae-lib

./: .clang-tidy  .gitignore  .readthedocs.yaml  CHANGELOG.md  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  pyproject.toml  vcpkg.json
.github/workflows/: ci.yml  python.yml
benchmarks/: CMakeLists.txt  benchmark_features.cpp  benchmark_hash.cpp  random.hpp
bindings/python/: CMakeLists.txt
bindings/python/examples/: features_minimal.py
bindings/python/src/: common.hpp  features.cpp  openae.cpp
bindings/python/src/openae/: __init__.py  __init__.pyi  features.pyi
bindings/python/tests/: test_benchmarks.py  test_features.py
cmake/: FindCatch2.cmake  Findbenchmark.cmake  Findtomlplusplus.cmake  FindxxHash.cmake  openaeConfig.cmake.in
docs/: .gitignore  Doxyfile  conf.py  index.rst
docs/cpp/: api.rst  get-started.md
docs/python/: api.rst  get-started.md
include/openae/: common.hpp  config.hpp.in  features.hpp
src/: CMakeLists.txt  cache.hpp  common.cpp  features.cpp  features_algorithm.cpp  features_meta.hpp  hash.hpp  utils.hpp
tests/: CMakeLists.txt  test_common.cpp  test_config.hpp.in  test_features.cpp  test_features_clearance-factor.toml  test_features_crest-factor.toml  test_features_energy.toml  test_features_impulse-factor.toml  test_features_kurtosis.toml  test_features_partial-power.toml  test_features_peak-amplitude.toml  test_features_rms.toml  test_features_shape-factor.toml  test_features_skewness.toml  test_features_spectral-centroid.toml  test_features_spectral-entropy.toml  test_features_spectral-flatness.toml  test_features_spectral-kurtosis.toml  test_features_spectral-peak-frequency.toml  test_features_spectral-rolloff.toml  test_features_spectral-skewness.toml  test_features_spectral-variance.toml  test_features_zero-crossing-rate.toml  tostring.hpp
